--- a/js/slick/slick.css
+++ b/js/slick/slick.css
@@ -18,6 +18,10 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+.slick-slider * {
+    outline: none;
+}
+
 .slick-list
 {
     position: relative;
