--- a/css/styles.css
+++ b/css/styles.css
@@ -401,9 +401,11 @@ header {padding:33px 0 32px 0; background:#fff}
 }
 
 @media screen and (max-width:767px) {
+    .open-menu-add body {overflow:hidden}
     .menu-add-link {top:26px; background:url(../images/menu-add-link-mobile.png)}
     .menu-add.open .menu-add-link {background-position:left -24px}
-    .menu-add-main {font-size:20px; left:-25px; padding:0 50px 0 30px}
+    .menu-add-main {font-size:20px; left:0; padding:76px 50px 0 30px; position:fixed; right:0; bottom:0; top:0; width:auto; overflow:auto}
+    .menu-add-main:before {display:none}
     .menu-add-main li a {padding:23px 50px 26px 30px; margin-right:-50px; margin-left:-30px}
     .menu-add-main li.menu-add-main-link a:after {right:50px}
 }
@@ -444,15 +446,35 @@ header {padding:33px 0 32px 0; background:#fff}
 .menu-add-catalogue-inner .catalogue-item-price-old {margin-top:15px}
 .menu-add-catalogue .jspTrack {background:#d9d9d9}
 .menu-add-catalogue .jspDrag {background:#0cb009}
+.menu-add-section-close-mobile {display:none}
 
 @media screen and (max-width:1199px) {
     .menu-add-sections {left:223px; top:0}
     .menu-add.open.open-sections .menu-add-sections {left:288px}
+    .menu-add-section {left:-3px}
+    .menu-add-sections > ul > li.open .menu-add-section {left:62px}
+    .menu-add-sections > ul > li > a {padding:25px 80px 25px 35px}
 }
 
 @media screen and (max-width:767px) {
-    .menu-add-sections {left:230px; top:0}
-    .menu-add.open.open-sections .menu-add-sections {left:295px}
+    .menu-add-sections {box-shadow:0 15px 30px rgba(0, 0, 0, .52)}
+    .menu-add-section-close-mobile {display:block; height:75px; background:#0082c9 url(../images/menu-add-section-close-mobile.png) no-repeat 35px 25px}
+    .menu-add-sections {left:25px; top:0; width:auto; right:0; bottom:0; overflow:auto; position:fixed; height:auto}
+    .menu-add.open.open-sections .menu-add-sections {left:90px}
+    .menu-add-sections > ul {font-size:18px}
+    .menu-add-section {left:25px; position:fixed; bottom:0; overflow:auto}
+    .menu-add-sections > ul > li.open .menu-add-section {left:90px}
+    .menu-add-section .main-sections-item-inner ul {display:block}
+    .menu-add-section-close {width:29px; height:24px; background:url(../images/menu-add-section-close-mobile.png); left:35px; top:25px}
+    .menu-add-section .main-sections-item-inner {height:275px; padding-left:35px; padding-right:150px}
+    .menu-add-section .main-sections-item-title {font-size:20px}
+    .menu-add-section .main-sections-item-inner ul {font-size:18px; line-height:25px; font-weight:300; padding:4px 0 0 0}
+    .menu-add-section .main-sections-item-inner ul li {padding:10px 0 0 0}
+    .menu-add-section .main-sections-item-img {height:275px; line-height:275px}
+    .menu-add-section .main-sections-item-img img:nth-child(1) {display:inline-block}
+    .menu-add-section .main-sections-item-img img:nth-child(2) {display:none}
+    .menu-add-sections .main-sections-item-04 .main-sections-item-img {top:35px}
+    .menu-add-catalogue {margin-top:0; max-height:none !important; position:absolute; left:0; top:300px; bottom:20px; width:379px}
 }
 
 .menu {float:right; font-weight:bold; text-transform:uppercase; line-height:50px; letter-spacing:1px}
