--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,8 @@ header {padding:33px 0 32px 0; background:#fff}
 .menu-add-section {opacity:0; visibility:hidden; z-index:990; position:absolute; left:23px; top:0; bottom:0; background:#f7f7f7; width:390px; box-shadow:0 7px 50px rgba(0, 0, 0, .33); transition:left .4s, opacity .4s, visibility .4s}
 .menu-add-sections > ul > li.open .menu-add-section {opacity:1; visibility:visible; left:88px}
 .menu-add-section-close {display:block; position:absolute; left:30px; top:32px; width:19px; height:14px; background:url(../images/menu-add-section-close.png)}
-.menu-add-sections .main-sections-item {float:none; text-transform:none; font-weight:normal; width:390px}
+.menu-add-sections .main-sections-item {float:none; text-transform:none; font-weight:normal; width:390px; margin-top:0; margin-right:0}
+.menu-add-sections .main-sections-item .main-sections-item-inner {height:150px; padding-top:50px; padding-bottom:50px}
 .menu-add-sections .main-sections-item:hover {position:static; z-index:auto}
 @media screen and (min-width:1200px) {
     .menu-add-sections .main-sections-item:hover .main-sections-item-bg {transform:none; box-shadow:none}
@@ -448,6 +449,10 @@ header {padding:33px 0 32px 0; background:#fff}
 .menu-add-catalogue .jspDrag {background:#0cb009}
 .menu-add-section-close-mobile {display:none}
 
+@media screen and (min-width:768px) {
+    .menu-add-catalogue {top:auto !important}
+}
+
 @media screen and (max-width:1199px) {
     .menu-add-sections {left:223px; top:0}
     .menu-add.open.open-sections .menu-add-sections {left:288px}
@@ -466,7 +471,7 @@ header {padding:33px 0 32px 0; background:#fff}
     .menu-add-sections > ul > li.open .menu-add-section {left:90px}
     .menu-add-section .main-sections-item-inner ul {display:block}
     .menu-add-section-close {width:29px; height:24px; background:url(../images/menu-add-section-close-mobile.png); left:35px; top:25px}
-    .menu-add-section .main-sections-item-inner {height:275px; padding-left:35px; padding-right:150px}
+    .menu-add-section .main-sections-item .main-sections-item-inner {height:175px; padding-left:35px; padding-right:150px}
     .menu-add-section .main-sections-item-title {font-size:20px}
     .menu-add-section .main-sections-item-inner ul {font-size:18px; line-height:25px; font-weight:300; padding:4px 0 0 0}
     .menu-add-section .main-sections-item-inner ul li {padding:10px 0 0 0}
@@ -475,6 +480,7 @@ header {padding:33px 0 32px 0; background:#fff}
     .menu-add-section .main-sections-item-img img:nth-child(2) {display:none}
     .menu-add-sections .main-sections-item-04 .main-sections-item-img {top:35px}
     .menu-add-catalogue {margin-top:0; max-height:none !important; position:absolute; left:0; top:300px; bottom:20px; width:379px}
+    .menu-add-section .main-sections-item-08 .main-sections-item-title {padding-right:30px}
 }
 
 .menu {float:right; font-weight:bold; text-transform:uppercase; line-height:50px; letter-spacing:1px}
@@ -1232,29 +1238,30 @@ header {padding:33px 0 32px 0; background:#fff}
 .main-sections-item-01 {background:#6cd86b}
 .main-sections-item-02 {background:#ffcc01}
 .main-sections-item-03 {background:#ffa224}
-.main-sections-item-04 {background:#e487d8; width:66.66%}
+.main-sections-item-04 {background:#e487d8; width:780px}
 .main-sections-item-05 {background:#699fff}
 .main-sections-item-06 {background:#78e1fe}
-.main-sections-item-07 {background:#7b72d3}
-.main-sections-item-08 {background:#0bab09; float:right}
-.main-sections-item-09 {background:#ffd201}
-.main-sections-item-10 {background:#f97878}
+.main-sections-item-07 {background:#7b72d3; margin-right:390px}
+.main-sections-item-10 {background:#0bab09; margin-top:-250px}
+.main-sections-item-08 {background:#ffd201}
+.main-sections-item-09 {background:#f97878}
 .main-sections-item-inner {display:table-cell; vertical-align:middle; height:250px; padding:0 190px 0 30px; position:relative; background-color:inherit}
-.main-sections-item-08 .main-sections-item-inner {height:500px; vertical-align:top}
+.main-sections-item-10 .main-sections-item-inner {height:500px; vertical-align:top}
 .main-sections-item-bg {position:absolute; left:0; top:0; right:0; bottom:0; background-color:inherit; transition:transform .3s ease}
 @media screen and (min-width:1200px) {
     .main-sections-item:hover .main-sections-item-bg {transform:scale(1.05); box-shadow:0 7px 50px rgba(0, 0, 0, .33)}
 }
-.main-sections-item-img {position:absolute; line-height:0; right:37px; top:0; height:250px; line-height:250px}
+.main-sections-item-img {position:absolute; line-height:0; right:37px; top:0; height:250px; line-height:250px; max-width:100%; overflow:hidden}
 .main-sections-item-img img {vertical-align:middle}
 .main-sections-item-img img:nth-child(2) {display:none}
 .main-sections-item-04 .main-sections-item-img {right:78px; top:auto; bottom:0; line-height:0; height:auto}
 .main-sections-item-06 .main-sections-item-img {right:23px}
-.main-sections-item-08 .main-sections-item-img {right:0; line-height:0; height:500px}
-.main-sections-item-09 .main-sections-item-img {right:15px}
-.main-sections-item-10 .main-sections-item-img {right:0}
+.main-sections-item-10 .main-sections-item-img {right:0; line-height:0; height:500px}
+.main-sections-item-08 .main-sections-item-img {right:15px}
+.main-sections-item-09 .main-sections-item-img {right:0}
 .main-sections-item-title {font-size:18px; font-weight:900; color:#fff; text-transform:uppercase; letter-spacing:1px; position:relative}
-.main-sections-item-08 .main-sections-item-title {padding:52px 0 0 0}
+.main-sections-item-10 .main-sections-item-title {padding:52px 0 0 0}
+.main-sections-item-08 .main-sections-item-title {padding-right:10px}
 .main-sections-item-title a {color:#fff}
 .main-sections-item-title a:hover {text-decoration:underline}
 .main-sections-item-inner ul {margin:5px 0 0 0; color:#fff; position:relative; line-height:15px}
@@ -1267,7 +1274,9 @@ header {padding:33px 0 32px 0; background:#fff}
     .main-sections {margin:0 -40px}
     .main-sections-item {width:50%}
     .main-sections-item-04 {width:100%}
-    .main-sections-item-05 {margin-left:-50%; margin-top:-250px}
+    .main-sections-item-05 {float:right; margin-top:-500px}
+    .main-sections-item-07 {margin-right:0}
+    .main-sections-item-08 {margin-right:50%}
 }
 
 @media screen and (max-width:767px) {
@@ -1275,15 +1284,12 @@ header {padding:33px 0 32px 0; background:#fff}
     .main-sections-item {width:100%; display:table !important; overflow:hidden}
     .main-sections-item+.main-sections-item {margin-top:10px}
     .main-sections-item-inner {height:150px; padding-left:25px}
-    .main-sections-item+.main-sections-item-08 {margin-top:330px}
-    .main-sections-item+.main-sections-item-09 {margin-top:-820px}
-    .main-sections-item+.main-sections-item-10 {margin-top:-660px}
-    .main-sections-item-05 {margin-left:0; margin-top:0}
-    .main-sections-item-08 .main-sections-item-inner {height:500px}
+    .main-sections-item-05 {margin-left:0}
+    .main-sections-item-10 .main-sections-item-inner {height:500px}
     .main-sections-item-img {right:0 !important; top:0 !important; bottom:auto !important; height:150px; line-height:0}
     .main-sections-item-img img:nth-child(1) {display:none}
     .main-sections-item-img img:nth-child(2) {display:block}
-    .main-sections-item-08 .main-sections-item-img {height:500px}
+    .main-sections-item-10 .main-sections-item-img {height:500px}
     .main-sections-item-inner ul {display:none}
 }
 
